gitops/apps/atlantis/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: atlantis
  labels:
    name: atlantis
